tests/ui/type-alias-impl-trait/wf-nested.pass.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/wf-nested.rs:34:38
   |
LL |     fn define<T>() -> OuterOpaque<T> {}
   |                                      ^^
   |                                      |
   |                                      the parameter type `T` must be valid for the static lifetime...
   |                                      ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL |     fn define<T: 'static>() -> OuterOpaque<T> {}
   |                +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/wf-nested.rs:37:69
   |
LL |     fn define_rpit<T>() -> impl Trait<&'static T, Out = impl Sized> {}
   |                                                                     ^^
   |                                                                     |
   |                                                                     the parameter type `T` must be valid for the static lifetime...
   |                                                                     ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL |     fn define_rpit<T: 'static>() -> impl Trait<&'static T, Out = impl Sized> {}
   |                     +++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0310`.
